--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="card">
       <div class="img-logo1">
-      <img class="car" src="images/icon-sedans.svg">
+      <img class="car" src="icon-sedans.svg">
       
         <h2>SEDANS</h2>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
@@ -30,7 +30,7 @@
 
           <div class="card">
             <div class="img-logo2">
-            <img class="car" src="images/icon-suvs.svg">
+            <img class="car" src="icon-suvs.svg">
               <h2>SUV</h2>
               <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
                 and off-road adventures.</p>
@@ -40,7 +40,7 @@
                 
                 <div class="card">
                   <div class="img-logo3">
-                  <img class="car" src="images/icon-luxury.svg">
+                  <img class="car" src="icon-luxury.svg">
                     <h2>LUXURY</h2>
                     <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
                       rental and arrive in style.</p>
